--- a/БД_АВТОРИЗАЦИЯ/БД_АВТОРИЗАЦИЯ.csproj
+++ b/БД_АВТОРИЗАЦИЯ/БД_АВТОРИЗАЦИЯ.csproj
@@ -193,6 +193,8 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+    <Resource Include="Картинки\колос.png" />
+    <Resource Include="Картинки\колос2.png" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
