--- a/БД_АВТОРИЗАЦИЯ/БД_АВТОРИЗАЦИЯ.csproj
+++ b/БД_АВТОРИЗАЦИЯ/БД_АВТОРИЗАЦИЯ.csproj
@@ -223,6 +223,7 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+    <Resource Include="Картинки\меню.png" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
