--- a/БД_АВТОРИЗАЦИЯ/Bakery.csproj
+++ b/БД_АВТОРИЗАЦИЯ/Bakery.csproj
@@ -6,14 +6,29 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{CC69BA18-322E-4909-A343-7D2B78158737}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>БД_АВТОРИЗАЦИЯ</RootNamespace>
-    <AssemblyName>БД_АВТОРИЗАЦИЯ</AssemblyName>
+    <RootNamespace>Bakery_Project</RootNamespace>
+    <AssemblyName>Bakery_Project</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -82,6 +97,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Authorization.xaml.cs">
+      <DependentUpon>Authorization.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Ingredients.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -100,6 +118,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Observer\Class1.cs" />
     <Compile Include="OrderedProducts.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -115,6 +134,16 @@
     <Compile Include="Roles.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Roles\BakeryWorker.xaml.cs">
+      <DependentUpon>BakeryWorker.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Manager.cs" />
+    <Compile Include="Roles\PurchasingManager.xaml.cs">
+      <DependentUpon>PurchasingManager.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Roles\_Admin.xaml.cs">
+      <DependentUpon>_Admin.xaml</DependentUpon>
+    </Compile>
     <Compile Include="suppliedIngredients.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -124,25 +153,15 @@
     <Compile Include="sysdiagrams.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Наблюдатель%28Observer%29\Class1.cs" />
-    <Compile Include="Роли\BakeryWorker.xaml.cs">
-      <DependentUpon>BakeryWorker.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Manager.cs" />
-    <Compile Include="Роли\PurchasingManager.xaml.cs">
-      <DependentUpon>PurchasingManager.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Роли\_Admin.xaml.cs">
-      <DependentUpon>_Admin.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Авторизация.xaml.cs">
-      <DependentUpon>Авторизация.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Состояние%28State%29\Class1.cs" />
-    <Compile Include="Хранитель%28Memento%29\Caretaker.cs" />
-    <Compile Include="Хранитель%28Memento%29\Memento.cs" />
-    <Compile Include="Хранитель%28Memento%29\Originator.cs" />
-    <Page Include="Роли\BakeryWorker.xaml">
+    <Compile Include="State\Class1.cs" />
+    <Compile Include="Memento\Caretaker.cs" />
+    <Compile Include="Memento\Memento.cs" />
+    <Compile Include="Memento\Originator.cs" />
+    <Page Include="Authorization.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Roles\BakeryWorker.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -158,15 +177,11 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Роли\PurchasingManager.xaml">
+    <Page Include="Roles\PurchasingManager.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Роли\_Admin.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Авторизация.xaml">
+    <Page Include="Roles\_Admin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -206,11 +221,26 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Картинки\колос.png" />
-    <Resource Include="Картинки\колос2.png" />
+    <Resource Include="Images\колос.png" />
+    <Resource Include="Images\колос2.png" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\меню.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 и x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Model1.Context.tt">
@@ -223,8 +253,6 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
-    <Resource Include="Картинки\меню.png" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
