--- a/БД_АВТОРИЗАЦИЯ/Bakery.csproj
+++ b/БД_АВТОРИЗАЦИЯ/Bakery.csproj
@@ -118,7 +118,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Observer\Class1.cs" />
+    <Compile Include="Observer\IngredientStockNotifier.cs" />
+    <Compile Include="Observer\IObservable.cs" />
+    <Compile Include="Observer\IObserver.cs" />
+    <Compile Include="Observer\PurchasingManager.cs" />
     <Compile Include="OrderedProducts.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -147,10 +150,12 @@
     <Compile Include="Roles\_Admin.xaml.cs">
       <DependentUpon>_Admin.xaml</DependentUpon>
     </Compile>
-    <Compile Include="State\Class1.cs" />
+    <Compile Include="State\IOrderState.cs" />
     <Compile Include="Memento\Caretaker.cs" />
     <Compile Include="Memento\Memento.cs" />
-    <Compile Include="Memento\Originator.cs" />
+    <Compile Include="Memento\Ordinator.cs" />
+    <Compile Include="State\NewOrderState.cs" />
+    <Compile Include="State\OrderContext.cs" />
     <Compile Include="suppliedIngredients.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
